# SmartAIPlatForm

./: .env  .env.example  .pre-commit-config.yaml  .smartai_rules.yaml  Dockerfile  README.md  docker-compose.yml  pipreqs.txt  pyproject.toml  requirements.txt  rule_mapping.json  run_app.py
.github/: dependabot.yml
docs/: MAPPING.md  SmartAIPlatform_Board.tsv  architecture.md  coding_and_modularization_standards.md  github-setup.md  github_compatible_doc_template.md  infrastructure.md  progress-checklist.md  progress.md  python-env-policy.md  python_script_coding_rules.md  requirements.md  rule_coverage.md  rule_dependency_graph.md  rule_usage_dashboard.md  technology-comparison.md  tests.md  tests_matrix.md  tests_status_summary.md  tooling-log.md
scripts/: auto_create_ci_issue.py  auto_create_security_issues.py  auto_update_requirements.py  central_args.py  central_logger.py  check_None.py  check_dependencies.py  check_docstrings.py  check_links.py  check_onboarding.py  check_py_length.py  check_python_utilities.py  check_shebang_and_imports.py  cleanup.py  cross_repo_rule_consistency.py  custom_lint.py  generate_test_docs.py  generate_test_matrix.py  manage_services.py  notify_email.py  notify_rule_change.py  notify_slack.py  pr_feedback_bot.py  pr_rule_violation_bot.py  renderMermaidDiagram.py  report_rule_coverage.py  rule_adoption_analytics.py  rule_authoring_sdk.py  rule_auto_tuning.py  rule_aware_review_assignment.py  rule_config.py  rule_dependency_graph.py  rule_deprecation_upgrade.py  rule_doc_sync.py  rule_drift_detection.py  rule_exception_review.py  (+21 more)
(+19 files in other folders)
